--- a/app/src/main/res/layout/chat_from_row.xml
+++ b/app/src/main/res/layout/chat_from_row.xml
@@ -4,13 +4,14 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="20dp">
+    android:layout_marginBottom="20dp"
+    android:background="@color/transparentBackround">
 
     <TextView
         android:id="@+id/textview_from_row"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/background_chat_from"
         android:fontFamily="@font/montserrat_regular"
         android:maxWidth="240dp"
@@ -18,6 +19,7 @@
         android:paddingTop="10dp"
         android:paddingRight="20dp"
         android:paddingBottom="10dp"
+        android:layout_marginRight="5dp"
         android:text="This is my message that will wrap into multipole lines and keep on going"
         android:textColor="#000"
         android:textSize="12sp"
@@ -26,11 +28,12 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageview_chat_from_row"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:src="@drawable/pi"
         android:layout_marginRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/transparentBackround"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
