--- a/app/src/main/res/layout/chat_to_row.xml
+++ b/app/src/main/res/layout/chat_to_row.xml
@@ -4,7 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="20dp">
+    android:layout_marginBottom="20dp"
+    android:background="@color/transparentBackround">
 
     <TextView
         android:id="@+id/textview_to_row"
@@ -21,17 +22,18 @@
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:layout_marginLeft="5dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageview_chat_to_row" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageview_chat_to_row"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_marginLeft="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/pi"/>
+        android:src="@drawable/pi"
+        android:background="@color/transparentBackround"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
