--- a/app/src/main/res/drawable/background_chat_from.xml
+++ b/app/src/main/res/drawable/background_chat_from.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#f2f5fe"/>
+<!--    <solid android:color="#f2f5fe"/>-->
+    <gradient
+        android:startColor="#6671e6"
+        android:endColor="#8ca8f7"
+        android:angle="180" />
+
     <corners
         android:topLeftRadius="50dp"
         android:topRightRadius="50dp"
