--- a/app/src/main/res/layout/chat_from_row.xml
+++ b/app/src/main/res/layout/chat_from_row.xml
@@ -21,7 +21,7 @@
         android:paddingBottom="10dp"
         android:layout_marginRight="5dp"
         android:text="This is my message that will wrap into multipole lines and keep on going"
-        android:textColor="#000"
+        android:textColor="@color/colorTextWhite"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageview_chat_from_row" />
